# Phelia

./: .env.example  .gitignore  .pre-commit-config.yaml  114d42f-jackett-302-logging.patch  7e52ac1-jackett-indexers-xapikey.patch  CHANGELOG.md  CLEANUP_CHANGELOG.md  CODE_AUDIT_REPORT.md  INTEGRATION_FIXES.md  README.md  bfe682e-jackett-indexers-endpoint.patch  com.phelia.plugins.jackett-0.1.0.phex  dabf6bd-jackett-all-results-min.patch  makefile  phelia_discovery_top_fix.patch  pyproject.toml  readme.md  simple_test.py  test_integrations.py
apps/api/: Dockerfile  alembic.ini  celerybeat-schedule  dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  seed_admin.py
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 1a1ed61f4de0_downloads_add_columns.py  2b742bd4cfa6_add_plugin_settings_table.py  3a0bff0782bd_adjust_provider_credentials_runtime.py  f35b2f12e9dc_initial.py  (+10 more)
apps/api/app/: __init__.py  main.py
apps/api/phelia/: __init__.py
apps/api/tests/: __init__.py  _testenv.py  conftest.py  test_auth.py  test_canonical_builder.py  test_capabilities_endpoint.py  test_details_endpoint.py  test_discover.py  test_discovery_routes.py  test_discovery_service.py  test_downloads.py  test_health.py  test_index_start_endpoint.py  test_jackett_adapter.py  test_library_endpoint.py  test_market_registry.py  test_meta_endpoints_v2.py  test_metadata_classifier.py  test_metadata_search_endpoint.py  test_musicbrainz_client.py  test_musicbrainz_provider.py  test_prowlarr_provider_search.py  test_qbclient_close.py  test_qbittorrent_client.py  test_qbittorrent_health.py  test_qbittorrent_integration.py  test_qbittorrent_login.py  test_removed_jackett_route.py  test_runtime_integration_settings.py  test_runtime_service_settings.py  test_search.py  test_secure_store.py  test_settings_endpoints.py  test_settings_integrations_endpoint.py  test_settings_prowlarr_indexers_endpoint.py  test_settings_services_endpoint.py  test_startup_logging.py  test_tasks.py  test_trackers.py
apps/api/v1/: __init__.py  deps.py
(+353 files in other folders)
